# grpc_rust_and_python

./: README.md
client/: main.py  proto.sh
client/proto/: hello_pb2.py  hello_pb2.pyi  hello_pb2_grpc.py
proto/: hello.proto
server/: Cargo.toml
server/src/: main.rs
